* 0.2.0
    * Moved pipeline code into new file.
    * Code now uses a proper cluster connection pool class that handles 
      all nodes and connections similar to how redis-py do.
    * Better support for pubsub. All clients will now talk to the same server because 
      pubsub commands do not work reliably if it talks to a random server in the cluster.
    * Better result callbacks and node routing support. No more ugly decorators.
    * Fix keyslot command when using non ascii characters.
    * Add bitpos support, redis-py 2.10.2 or higher required.
    * Fixed a bug where vagrant users could not build the package via shared folder.
    * Better support for CLUSTERDOWN error. (Neuront)
    * Parallel pipeline execution using threads (72squared)

* 0.1.0
    * Initial release
    * First release uploaded to pypi