@@ -16,12 +16,26 @@ See repo README for detailed instructions how to setup.
 
 # Vagrant
 
-Alternatively, you can also use vagrant to spin up redis cluster in a vm for testing.
+You can also use vagrant to spin up redis cluster in a vm for testing. The vm also provides all the python libraries needed to run the tests.
 
-A fully functional vagrant machine can be obtained at [Vagrant-redis-cluster](https://github.com/72squared/vagrant-redis-cluster).
+To use the vm, first install vagrant on your system (Instructions can be found at: http://www.vagrantup.com/).
+Navigate to root of this project in your ssh terminal and run these commands:
 
-See repo README for detailed instructions how to setup.
 
+```
+vagrant up && vagrant ssh
+```
+
+This will print out a bunch of debugging output as it installs redis-server and all the python libraries.
+If all is successful, you will be logged into the vagrant instance at the end.
+
+Once inside the vagrant instance you should be able to do:
+
+```
+cd /vagrant && make test
+```
+
+This will put you in the root directory of this project from within vagrant and run all of the tests.
 
 
 # Simple makefile
